--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div id="mensaje">
             <p>Te amo hasta la luna y mas alla en pasitos de tortugaa 🐢🌙❤️</p>
-            <button id="btnAbrirCompleta">Abrir Carta Completa</button>
+            <button id="btnAbrirCompleta">Ahora si la carta amor JKDSADAJSADKSA</button>
         </div>
     </div>
 
